--- a/mainweb/categories.html
+++ b/mainweb/categories.html
@@ -185,7 +185,7 @@
                                 </li>
                                 <li class="text-muted text-right">$360.00</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Earpods</a>
+                            <a href="shop-elec.html" class="h2 text-decoration-none text-dark">Earpods</a>
                             <p class="card-text">
                                 boAt Airdopes 141 True Wireless Earbuds with 42H Playtime, Beast™ Mode(Low Latency Upto 80ms) for Gaming, ENx™ Tech, ASAP™ Charge, IWP™, IPX4 Water Resistance, Smooth Touch Controls(Bold Black).
                             </p>
