--- a/mainweb/shop-single.html
+++ b/mainweb/shop-single.html
@@ -70,11 +70,11 @@
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="#">
                         <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">5</span>
                     </a>
                     <a class="nav-icon position-relative text-decoration-none" href="#">
                         <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+121</span>
                     </a>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                 <div class="col-lg-7 mt-5">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="h2">Active Wear</h1>
+                            <h1 class="h2">Decoratives</h1>
                             <p class="h3 py-2">$25.00</p>
                             <p class="py-2">
                                 <i class="fa fa-star text-warning"></i>
@@ -136,7 +136,7 @@
                             </ul>
 
                             <h6>Description:</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse. Donec condimentum elementum convallis. Nunc sed orci a diam ultrices aliquet interdum quis nulla.</p>
+                            <p>Brass Panch Diya For Puja Big Size Panch Aarti Lamp Pancharti Diya Oil Lamp Panch Mukhi Aarti Deepak Oil Lamp Jyoti Puja Diya Stand Aarti Diya Temple || Puja Diya for Diwali/Navratri AVA690.</p>
                             <!-- <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <h6>Avaliable Color :</h6>
